# scut-robot

./: .gitignore
cxx/: CMakeLists.txt  armor_cpp  build.sh
cxx/src/: armor_cpp.cpp  armor_pic.cpp
cxx/tools/: clear.sh  cmake.build.sh
midterm/aruco-analysis/: CMakeLists.txt
midterm/aruco-analysis/python/: aruco_generator.py  detect.py
midterm/aruco-analysis/src/: main.cpp
midterm/feature-tracking/: CMakeLists.txt
midterm/feature-tracking/src/: main.cpp
midterm/feature-tracking/test/: main.py
midterm/image-recognition/: CMakeLists.txt
midterm/image-recognition/src/: main.cpp
midterm/image-recognition/test/: test.py
midterm/image-recognition/tools/: build.sh  test.sh
py/: armor.py  armor_cuda.py  armor_his.py  armor_mp.py  armor_single_pic.py
vision_module/: main.py
